# chuthe-api

./: .coverage  .gitignore  Dockerfile  Dockerfile.lib  Makefile  README.md  entrypoint.sh  env.example  exportenvs.sh  helpers.py  manage.py  pyproject.toml
.github/workflows/: test.yml
alias/: admin.py  apps.py  docs.py  managers.py  models.py  paging.py  permissions.py  serializers.py  tests.py  urls.py  views.py
alias/docs/: alias.py  contact.py  link.py  payment.py  social.py
alias/management/commands/: check_config.py  load_config.py  mock_alias.py
alias/migrations/: 0001_initial.py  0002_initial.py  0003_alias_des.py  0003_alias_links.py
apps/: admin.py  docs.py  serializers.py  urls.py  views.py
chuthe/: __init__.py  asgi.py  celery.py  celery_config.py  checks.py  logging.py  roles.py  urls.py  views.py
chuthe/auth/: apps.py  docs.py  serializers.py  urls.py  views.py
chuthe/auth/reg/: urls.py  views.py
chuthe/errors/: business.py  exceptions.py
chuthe/middlewares/: supervisor.py
chuthe/settings/: commons.py  dev.py  prod.py  staging.py
company/: models.py
company/migrations/: 0001_initial.py
docs/: __init__.py  admin.py  hooks.py  urls.py  utils.py
docs/md/: instruction.md
dumps/: sites.json
manager/: tests.py  urls.py  views.py
manager/docs/: alias.py
nof/: apps.py  urls.py
user/: admin.py  auth.py  docs.py  managers.py  models.py  perms.py  serializers.py  tasks.py  tests.py  throttles.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_user_phone_profile.py
